Revision history for Perl extension Number-RGB

1.3 2015-09-26
    - Zoffix Znet <cpan@zoffix.com> assigned as the maintainer of the module

1.2 2004-03-06
    - Doc typo in as_string()

1.1 2004-03-06
    - Initial Release