@@ -2,6 +2,10 @@ Revision history for Perl extension Number-RGB
 
 1.3 2015-09-26
     - Zoffix Znet <cpan@zoffix.com> assigned as the maintainer of the module
+    - Fixed hash randomization bug (#1)
+    - ->new_from_guess() for 0..255 now never assumes it's hex (#1)
+    - Fixed incompatibility with newer Attribute::Handlers (RT#41394)
+    - Minor documentation clarifications
 
 1.2 2004-03-06
     - Doc typo in as_string()
